<resources>
    <string name="app_name">JChat</string>
    <string name="title_activity_login">登录</string>

    <string name="error_server">服务器繁忙</string>
    <string name="error_null">暂无数据</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--引导页-->
    <string name="index_start">START MESSAGING</string>
    <string name="index_1_title">Telegram</string>
    <string name="index_1_desc">The world\'s fastest messaging app.\nIt is free and secure.</string>
    <string name="index_2_title">Fast</string>
    <string name="index_2_desc">Telegram delivers messages faster than\nany other application.</string>
    <string name="index_3_title">Free</string>
    <string name="index_3_desc">Telegram is free forver.No ads.\n No subscription fees.</string>
    <string name="index_4_title">Secure</string>
    <string name="index_4_desc">Telegram keeps your message safe\nfrom hakers attacks.</string>
    <string name="index_5_title">Powerful</string>
    <string name="index_5_desc">Telegram has no limits on the size of\nyour media and chats.</string>
    <string name="index_6_title">Cloud-Based</string>
    <string name="index_6_desc">Telegram let you access your messages from multipule devices</string>
    <string name="index_7_title">Private</string>
    <string name="index_7_desc">Telegram message are heavily encrypted\nand can self-destruct.</string>
    <string name="title_activity_navigation_drawer">Telegram</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--登录-->
    <string name="login_phone_head_hint">+86</string>
    <string name="action_login_short">好啦</string>
    <string name="action_login_phone">--- ---- ----</string>
    <string name="action_login_ver_hint">We\'ve sent an SMS with an activation code to your phone</string>
    <string name="action_login_ver">Code</string>
    <string name="action_login_ver_call">We will call you in 1:54</string>
    <string name="action_login_ver_wrong">Wrong number?</string>
    <!--个人信息-->
    <string name="user_info_share">Share</string>
    <string name="user_info_shortcut">Add shortcut</string>
    <string name="user_info_title">Info</string>
    <string name="user_info_phone">Phone</string>
    <string name="user_info_name">Username</string>
    <string name="user_info_take_photo">拍</string>
    <string name="user_info_chat">聊</string>

</resources>
