<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <import type="com.jarry.jchat.model.LoginVerify"></import>

        <variable
            name="loginVerify"
            type="LoginVerify" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/login_line"
        android:paddingRight="@dimen/login_line">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/action_login_ver_hint" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/verification"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:hint="@string/action_login_ver"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="11"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={loginVerify.verification}" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/action_login_ver_call" />

        <TextView
            android:id="@+id/wrongNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/action_login_ver_wrong"
            android:textColor="@color/login_ver_wrong" />
    </LinearLayout>
</layout>