<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <import type="com.jarry.jchat.model.Login"></import>

        <variable
            name="login"
            type="Login" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/login_line"
        android:paddingRight="@dimen/login_line">

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:text="China"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selector_login_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="40dp"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phoneHead"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:focusable="false"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/login_phone_head_hint" />

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone"
                        style="@style/LoginEditText"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:hint="@string/action_login_phone"
                        android:imeActionLabel="@string/action_login_short"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={login.phone}" />

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</layout>